--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
         "prisma": "^5.7.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
+    },
+    "publishConfig": {
+        "@YOUR-USERNAME:registry": "https://npm.pkg.github.com"
     }
 }
