--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "homepage": "https://github.com/fardeenes7/unidemy-prisma#readme",
     "dependencies": {
-        "@prisma/client": "2.18.0"
+        "@prisma/client": "^5.7.1"
     },
     "devDependencies": {
         "@types/node": "^20.10.6",
