--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@fardeenes7/unidemy-prisma",
-    "version": "1.0.0",
+    "version": "v1.24.01.05",
     "description": "Prisma setup for unidemy",
     "main": "index.js",
     "scripts": {
