--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "postinstall": "tsc && npx prisma@5.7.1 generate",
         "db:introspect": "dotenv -- prisma introspect",
-        "db:generate": "dotenv -- prisma generate"
+        "db:generate": "dotenv -- prisma generate",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
