--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,4 +1,4 @@
-name: Node.js Package
+name: "@fardeenes7/unidemy-prisma"
 
 on: [push]
 
@@ -24,4 +24,4 @@ jobs:
             - run: npm ci
             - run: npm publish
               env:
-                  NODE_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
